--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/tmfa
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql = true
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
