--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tmfa
+spring.datasource.url=jdbc:mysql://localhost:3306/tfma
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
 
